--- a/employee/package.json
+++ b/employee/package.json
@@ -6,8 +6,10 @@
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
+    "bootstrap": "^5.0.0-beta3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-bootstrap": "^0.25.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.1"
   },
