--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   },
   "homepage": "https://github.com/erumd/Employee-Directory#readme",
   "dependencies": {
-    "bootstrap": "^4.6.0",
+    "bootstrap": "^5.0.0-beta3",
+    "react-bootstrap": "^1.5.2",
     "react-router-dom": "^5.2.0",
     "table": "^6.3.2"
   }
