--- a/employee/package.json
+++ b/employee/package.json
@@ -2,12 +2,14 @@
   "name": "employee",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://erumd.github.io/Employee-Directory",
   "dependencies": {
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
     "bootstrap": "^5.0.0-beta3",
+    "gh-pages": "^3.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-bootstrap": "^0.25.0",
@@ -15,6 +17,8 @@
     "web-vitals": "^1.1.1"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
